--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -32,3 +32,7 @@ jobs:
       - name: Run Tests
         run: |
           go test ./database
+      - name: Run vet
+        run: |
+          go vet ./database/ ./logging/ ./sse/
+          go vet *.go
