--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       VOTE_OIDC_ID: vote-dev
       VOTE_OIDC_SECRET: "${VOTE_OIDC_SECRET}"
       VOTE_STATE: 27a28540e47ec786b7bdad03f83171b3
+      DEV_DISABLE_ACTIVE_FILTERS: "${DEV_DISABLE_ACTIVE_FILTERS}"
+      DEV_FORCE_IS_EVALS: "${DEV_FORCE_IS_EVALS}"
     ports:
       - "127.0.0.1:8080:8080"
 
