Made compose file so u don't have to rebuild everytime you make changes (#77)
* Made dev compose file so u don't have to rebuild everytime you make changes

* Merged dev and normal compose files

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,15 @@
 version: "3"
 services:
   vote:
-    build: .
+    build:
+      context: .
+      target: build
+    working_dir: /src
+    command: ["go", "run", "./..."]
+    volumes:
+      - type: bind
+        source: .
+        target: /src
     container_name: vote
     depends_on:
       - mongodb
